source/tests/errors/old/undefined_function_in_module.apex
import os
os.nonexistent_function()
